--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/scss/styles.min.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -19,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>JS Algorithms</title>
   </head>
   <body>
     <noscript>
@@ -36,5 +37,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <div id="particle-canvas"></div>
+    <script type="text/javascript" src="%PUBLIC_URL%/assets/js/particle-network.min.js"></script>
+    <script type="text/javascript">
+      let canv = document.getElementById('particle-canvas');
+      let options = {
+      	particleColor: '#f44250',
+      	background: '#1a252f',
+      	interactive: true,
+      	speed: 'fast',
+      	density: 'medium'
+      };
+  		let particleCanvas = new ParticleNetwork(canv, options);
+  	</script>
   </body>
 </html>
